--- a/boards/shields/silakka54/silakka54-layouts.dtsi
+++ b/boards/shields/silakka54/silakka54-layouts.dtsi
@@ -1,9 +1,7 @@
-#include <physical_layouts.dtsi>
-
 / {
-    silakka54_layout: silakka54_layout {
+    physical_layout0: physical_layout_0 {
         compatible = "zmk,physical-layout";
-        display-name = "Default";
+        display-name = "Default Layout";
 
         keys  //                     w   h    x    y     rot    rx    ry
             = <&key_physical_attrs 100 100    0   50       0     0     0>
