--- a/build.yaml
+++ b/build.yaml
@@ -19,15 +19,15 @@
 #
 ---
 include:
-  - board: nrf52840dk_nrf52840
+  - board: nice_nano_v2
     shield: silakka54_dongle
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-  - board: nrf52840dk_nrf52840
+  - board: nice_nano_v2
     shield: silakka54_left
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-  - board: nrf52840dk_nrf52840
+  - board: nice_nano_v2
     shield: silakka54_right
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
-  - board: nrf52840dk_nrf52840
+  - board: nice_nano_v2
     shield: settings_reset
